管理者登録画面の完成

--- a/src/main/resources/templates/administrator/insert.html
+++ b/src/main/resources/templates/administrator/insert.html
@@ -35,7 +35,7 @@
 
 					<!-- ここにモックのform要素を貼り付けます -->
 					<form method="post" action="login.html" th:action="@{/insert}"
-						th:object="${insertAdmnistratorForm}">
+						th:object="${insertAdministratorForm}">
 						<fieldset>
 							<legend>
 								管理者登録<br>(システムにログインできる管理者を登録します)
