--- a/src/main/resources/templates/employee/detail.html
+++ b/src/main/resources/templates/employee/detail.html
@@ -68,7 +68,8 @@
 					<!-- ここから上を編集する必要はありません -->
 
 					<!-- ここにモックのform要素を貼り付けます -->
-					<form method="post" action="list.html">
+					<form method="post" action="list.html"
+						th:action="@{/employee/update}" th:object="${updateEmployee}">
 						<fieldset>
 							<legend>従業員情報</legend>
 							<table class="table table-striped">
@@ -118,9 +119,9 @@
 									<th nowrap>扶養人数</th>
 									<td><label class="error-messages"> 扶養人数を入力してください </label>
 										<label class="control-label" style="color: red"
-										for="dependentsCount"></label> <input type="hidden" name="id" value="5">
-										<input type="text" name="dependentsCount" id="dependentsCount"
-										class="form-control" value="3"></td>
+										for="dependentsCount"></label> <input type="hidden" name="id"
+										value="5"> <input type="text" name="dependentsCount"
+										id="dependentsCount" class="form-control" value="3"></td>
 								</tr>
 							</table>
 							<button type="submit" class="btn btn-primary">更新</button>
