--- a/src/main/resources/templates/administrator/insert.html
+++ b/src/main/resources/templates/administrator/insert.html
@@ -44,8 +44,11 @@
 							<div class="form-group">
 								<div class="row">
 									<div class="col-sm-12">
-										<label for="name"> 氏名: </label> <label class="error-messages">
-											氏名を入力してください </label> <input type="text" name="name" id="name"
+										<label for="name"> 氏名: </label> 
+										<label th:errors="*{name}" class="error-messages">
+											氏名を入力してください 
+											</label> 
+											<input type="text" name="name" id="name"
 											class="form-control" placeholder="山田太郎" th:field="*{name}">
 									</div>
 								</div>
@@ -54,9 +57,11 @@
 							<div class="form-group">
 								<div class="row">
 									<div class="col-sm-12">
-										<label for="mailAddress"> メールアドレス: </label> <label
-											class="error-messages"> メールアドレスを入力してください </label> <input
-											type="text" name="mailAddress" id="mailAddress"
+										<label for="mailAddress"> メールアドレス: </label>
+										 <label th:errors="*{mailAddress}" class="error-messages"> 
+										 メールアドレスを入力してください
+										  </label>
+										  <input type="text" name="mailAddress" id="mailAddress"
 											class="form-control" placeholder="yamada@mail.com"
 											th:field="*{mailAddress}">
 									</div>
@@ -66,9 +71,11 @@
 							<div class="form-group">
 								<div class="row">
 									<div class="col-sm-12">
-										<label for="passwaord"> パスワード: </label> <label
-											class="error-messages"> パスワードを入力してください </label> <input
-											type="password" name="password" id="password"
+										<label for="passwaord"> パスワード: </label> 
+										<label th:errors="*{password}" class="error-messages"> 
+										パスワードを入力してください 
+										</label> 
+										<input type="password" name="password" id="password"
 											class="form-control" placeholder="password"
 											th:field="*{password}">
 									</div>
