--- a/src/main/resources/templates/employee/detail.html
+++ b/src/main/resources/templates/employee/detail.html
@@ -117,7 +117,7 @@
 								</tr>
 								<tr>
 									<th nowrap>扶養人数</th>
-									<td><label class="error-messages"> 扶養人数を入力してください </label>
+									<td><label th:errors="*{dependentsCount}" class="error-messages"> 扶養人数を入力してください </label>
 										<label class="control-label" style="color: red"
 										for="dependentsCount"></label> <input type="hidden" name="id"
 										value="5"> <input type="text" name="dependentsCount"
