rグイン画面に移行する処理を修正しました

--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -79,20 +79,9 @@
 								th:href="@{/employee/showDetail?id=} + ${employee.id}"> <span
 									th:text="${employee.name}">山田太郎</span>
 							</a></td>
-							<td><span th:text="${employee.name}">2016/12/1</span></td>
+							<td><span
+								th:text="${#dates.format(employee.hireDate,'yyyy年MM月dd日')}">2016/12/1</span></td>
 							<td><span th:text="${employee.dependentsCount}">3人</span></td>
-						</tr>
-						<tr>
-							<td><a href="detail.html"> <span>山田太郎</span>
-							</a></td>
-							<td><span>2016/12/1</span></td>
-							<td><span>3人</span></td>
-						</tr>
-						<tr>
-							<td><a href="detail.html"> <span>山田太郎</span>
-							</a></td>
-							<td><span>2016/12/1</span></td>
-							<td><span>3人</span></td>
 						</tr>
 					</tbody>
 				</table>
