--- a/src/main/resources/templates/employee/detail.html
+++ b/src/main/resources/templates/employee/detail.html
@@ -84,35 +84,35 @@
 								</tr>
 								<tr>
 									<th nowrap>性別</th>
-									<td><span>女性</span></td>
+									<td><span th:text="${employee.gender}">女性</span></td>
 								</tr>
 								<tr>
 									<th nowrap>入社日</th>
-									<td><span>2012/11/29</span></td>
+									<td><span th:text="${#dates.format(employee.hireDate,'yyyy年MM月dd日')}">2012/11/29</span></td>
 								</tr>
 								<tr>
 									<th nowrap>メールアドレス</th>
-									<td><span>yamada@sample.com</span></td>
+									<td><span th:text="${employee.mailAddress}">yamada@sample.com</span></td>
 								</tr>
 								<tr>
 									<th nowrap>郵便番号</th>
-									<td><span>111-1111</span></td>
+									<td><span th:text="${employee.zipCode}">111-1111</span></td>
 								</tr>
 								<tr>
 									<th nowrap>住所</th>
-									<td><span>東京都新宿区1-1-1</span></td>
+									<td><span th:text="${employee.address}">東京都新宿区1-1-1</span></td>
 								</tr>
 								<tr>
 									<th nowrap>電話番号</th>
-									<td><span>090-0000-0000</span></td>
+									<td><span th:text="${employee.telephone}">090-0000-0000</span></td>
 								</tr>
 								<tr>
 									<th nowrap>給料</th>
-									<td><span>400000円</span></td>
+									<td><span th:text="${employee.salary}">400000円</span></td>
 								</tr>
 								<tr>
 									<th nowrap>特性</th>
-									<td><span>明るく素直な性格です。リーダーシップを発揮します。新卒社員研修の時はグループ開発の時にリーダーを買ってでました。積極性も人間性も抜群です。周りに対する不満も聞いたことがありません。</span>
+									<td><span th:text="${employee.characteristics}">明るく素直な性格です。リーダーシップを発揮します。新卒社員研修の時はグループ開発の時にリーダーを買ってでました。積極性も人間性も抜群です。周りに対する不満も聞いたことがありません。</span>
 									</td>
 								</tr>
 								<tr>
@@ -120,8 +120,8 @@
 									<td><label th:errors="*{dependentsCount}" class="error-messages"> 扶養人数を入力してください </label>
 										<label class="control-label" style="color: red"
 										for="dependentsCount"></label> <input type="hidden" name="id"
-										value="5"> <input type="text" name="dependentsCount"
-										id="dependentsCount" class="form-control" value="3"></td>
+									th:value="${employee.id}"> <input type="text" name="dependentsCount"
+										id="dependentsCount" class="form-control" th:value="${employee.dependentsCount}"></td>
 								</tr>
 							</table>
 							<button type="submit" class="btn btn-primary">更新</button>
