--- a/src/main/resources/templates/employee/list.html
+++ b/src/main/resources/templates/employee/list.html
@@ -1,18 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="headerfooter ::header2">
 <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>従業員管理システム</title>
-<link rel="stylesheet" href="../../static/css/bootstrap.css"
-	th:href="@{/css/bootstrap.css}">
-<link rel="stylesheet" href="../../static/css/style.css"
-	th:href="@{/css/style.css}">
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
 </head>
 <body>
 	<div class="container">
@@ -92,11 +82,8 @@
 			</div>
 		</div>
 	</div>
-	<!-- end container -->
+	<footer th:replace="headerfooter :: footer"></footer>
 
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="../../static/js/bootstrap.min.js"
-		th:src="@{/js/bootstrap.min.js}"></script>
+
 </body>
 </html>
