--- a/src/main/resources/templates/employee/detail.html
+++ b/src/main/resources/templates/employee/detail.html
@@ -28,7 +28,7 @@
 				<div class="collapse navbar-collapse"
 					id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav">
-						<li class="active"><a href="list.html">従業員管理</a></li>
+						<li class="active"><a href="list.html" th:href="@{/employee/showList}">従業員管理</a></li>
 					</ul>
 					<p class="navbar-text navbar-right">
 						<span th:text="${session.administratorName + 'さん'}">山田さん</span>こんにちは！
@@ -65,7 +65,9 @@
 							<table class="table table-striped">
 								<tr>
 									<th nowrap>従業員名</th>
-									<td><span th:text="${employee.name}">山田花子</span></td>
+									<td><input type="hidden" name="id" th:value="${employee.id}">
+										<input type="text" name="name" id="name"
+										class="form-control" th:value="${employee.name}"></td>
 								</tr>
 								<tr>
 									<th nowrap>写真</th>
@@ -74,35 +76,53 @@
 								</tr>
 								<tr>
 									<th nowrap>性別</th>
-									<td><span th:text="${employee.gender}">女性</span></td>
+									<td>
+										<input type="text" name="gender" id="gender"
+										class="form-control" th:value="${employee.gender}"></td>
 								</tr>
 								<tr>
 									<th nowrap>入社日</th>
-									<td><span th:text="${#dates.format(employee.hireDate,'yyyy年MM月dd日')}">2012/11/29</span></td>
+									<td>
+										<input type="text" name="hireDate" id="hireDate"
+										class="form-control" th:value="${employee.hireDate}"></td>
 								</tr>
 								<tr>
 									<th nowrap>メールアドレス</th>
-									<td><span th:text="${employee.mailAddress}">yamada@sample.com</span></td>
+									<td>
+										<input type="text" name="mailAddress" id="mailAddress"
+										class="form-control" th:value="${employee.mailAddress}"></td>
 								</tr>
 								<tr>
 									<th nowrap>郵便番号</th>
-									<td><span th:text="${employee.zipCode}">111-1111</span></td>
+									<td>
+										<input type="text" name="zipCode" id="zipCode"
+										class="form-control" th:value="${employee.zipCode}"></td>
 								</tr>
 								<tr>
 									<th nowrap>住所</th>
-									<td><span th:text="${employee.address}">東京都新宿区1-1-1</span></td>
+									<td>
+										<input type="text" name="address" id="address"
+										class="form-control" th:value="${employee.address}"></td>
 								</tr>
 								<tr>
 									<th nowrap>電話番号</th>
-									<td><span th:text="${employee.telephone}">090-0000-0000</span></td>
+									<td>
+										<input type="text" name="telephone" id="telephone"
+										class="form-control" th:value="${employee.telephone}">
+									</td>
 								</tr>
 								<tr>
 									<th nowrap>給料</th>
-									<td><span th:text="${employee.salary}">400000円</span></td>
+									<td>
+										<input type="text" name="salary" id="salary"
+										class="form-control" th:value="${employee.salary}">
+									</td>
 								</tr>
 								<tr>
 									<th nowrap>特性</th>
-									<td><span th:text="${employee.characteristics}">明るく素直な性格です。リーダーシップを発揮します。新卒社員研修の時はグループ開発の時にリーダーを買ってでました。積極性も人間性も抜群です。周りに対する不満も聞いたことがありません。</span>
+									<td>
+										<textarea  rows="4" cols="40" name="characteristics" id="characteristics"
+										class="form-control" th:text="${employee.characteristics}"></textarea>
 									</td>
 								</tr>
 								<tr>
